<resources>
    <string name="app_name">Meditation Retreat Timer</string>
    <string name="timers">Timers</string>
    <string name="settings">Settings</string>
    <string name="start_timer">Start timer</string>
    <string name="edit_timer">Edit timer</string>
    <string name="delete_timer">Delete timer</string>
    <string name="edit_instructions">Enter a list of bell times here. When playing a timer, adjacent times will display as a segment whose name is the name attached to the segment\'s start time. The last time will display as a segment with no end, so a name like \"End of day\" works well.</string>
    <string name="add_bell_time_content_des">Add bell time</string>
    <string name="add_new_timer_content_des">Add new timer</string>
    <string name="time_format">Time format</string>
    <string name="hour_format_12">12-hour (e.g. 4:00pm)</string>
    <string name="hour_format_24">24-hour (e.g. 16:00)</string>
    <string name="auto_dnd">Auto-DND</string>
    <string name="auto_dnd_check1">Automatically start Do Not Disturb mode when playing a timer</string>
    <string name="auto_dnd_check2">Never prompt for Do Not Disturb permission</string>
    <string name="auto_airplane">Auto-Airplane</string>
    <string name="auto_airplane_check1">Automatically start Airplane mode when playing a timer</string>
    <string name="auto_airplane_check2">Never prompt for Airplane permission</string>
    <string name="play_timer_options">Play Timer options</string>
    <string name="show_progress_on_lock_screen">Show active timer segment on lock screen</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="about_app_name_and_version">Meditation Retreat Timer, v1.0</string>
    <string name="about_oss">Open source and for the benefit of all beings.</string>
    <string name="about_github_url">https://github.com/apellis/meditationretreattimer</string>
    <string name="about_copyright">Copyright 2023, Neversink LLC</string>
    <string name="choose_new_bell_name_and_time">Choose a name and time for the new bell.</string>
    <string name="bell_time_name">Bell time name</string>
</resources>