<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/timer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        tools:text="Name of timer" />

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_play_circle_24"
        android:contentDescription="@string/start_timer" />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_edit_24"
        android:contentDescription="@string/edit_timer" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_delete_24"
        android:contentDescription="@string/delete_timer" />

</androidx.constraintlayout.widget.ConstraintLayout>