<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/Theme.MeditationRetreatTimer"
        app:popupTheme="@style/Theme.MeditationRetreatTimer"
        tools:ignore="MissingConstraints" />

    <Space
        android:id="@+id/space0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="20dp"
        android:maxHeight="20dp" />

    <RadioGroup
        android:id="@+id/time_format_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space0"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/time_format_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/time_format" />
        <RadioButton
            android:id="@+id/hour_format_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_format_12" />
        <RadioButton
            android:id="@+id/hour_format_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_format_24" />
    </RadioGroup>

    <Space
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time_format_group"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="20dp"
        android:maxHeight="20dp" />

    <!--
    <LinearLayout
        android:id="@+id/play_options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space1"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/play_options_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/play_timer_options" />
        <CheckBox
            android:id="@+id/lock_screen_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_progress_on_lock_screen" />
    </LinearLayout>

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/play_options_group"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="20dp"
        android:maxHeight="20dp" />
    -->

    <LinearLayout
        android:id="@+id/auto_dnd_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space1"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/auto_dnd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/auto_dnd" />
        <CheckBox
            android:id="@+id/auto_dnd_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_dnd_check1" />
        <CheckBox
            android:id="@+id/auto_dnd_perm_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_dnd_check2" />
    </LinearLayout>

    <!--
    <Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auto_dnd_group"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="20dp"
        android:maxHeight="20dp" />

    <LinearLayout
        android:id="@+id/auto_airplane_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space3"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/auto_airplane_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/auto_airplane" />
        <CheckBox
            android:id="@+id/auto_airplane_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_airplane_check1" />
        <CheckBox
            android:id="@+id/auto_airplane_perm_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_airplane_check2" />
    </LinearLayout>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>